# housing

./: .gitignore  Dockerfile  README.md  local_deploy.sh  model-watcher.Dockerfile  model_watcher.py  pyproject.toml  simple_inference.py
k8s/: deployment.yaml  load-balancer.yaml  model-pvc.yaml  model-watcher.yaml  role-binding.yaml  role.yaml
research/: model_improvements.ipynb
src/housing/: api.py  app.py  config.py
src/housing/modeling/: create_model.py  evaluate_model.py
