[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing"
version = "0.0.1"
description = "A package for housing data analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Cody Dirks", email="cody.dirks@gmail.com" }
]
dependencies = [
    "pandas==2.1.1",
    "scikit-learn==1.3.1",
    "fastapi==0.121.1",
    "uvicorn==0.24.0",
    "requests",
    "tqdm",
    "kubernetes"
]

[tools.setuptools]
package-dir = {"" = "src"}

